# chess-cpp

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Knight.h  LICENSE  Pawn.h  Queen.h  README.md  build.sh  main.cpp
Chess_lib/: Bishop.h  Board.cpp  Board.h  CMakeLists.txt  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
Google_tests/: BishopMoveTest.cpp  CMakeLists.txt  KnightMoveTest.cpp  PawnMoveTest.cpp  PieceMoveTest.cpp  QueenMoveTest.cpp  RookMoveTest.cpp
